# doc-fetch

./: .npmignore  CHANGELOG-v2.md  CONTRIBUTING.md  CROSS-PLATFORM-FIXES.md  INSTALLATION-FIX.md  QUICK-FIX-WINDOWS.md  README.md  SECURITY.md  go.mod  go.sum  package.json  pyproject.toml  setup.py
cmd/docfetch/: main.go
doc_fetch/: __init__.py  __main__.py  cli.py
doc_fetch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: usage.md
examples/: golang-example.sh
pkg/fetcher/: classifier.go  content_grouper.go  describer.go  extract_nav.go  fetcher.go  fetcher_optimized.go  html2md.go  llmtxt.go  validator.go  writer.go
scripts/: verify-binaries.js
website/: .gitignore  BLOG-SETUP-SUMMARY.md  DEPLOYMENT.md  LAUNCH-CHECKLIST.md  README.md  SEO-STRATEGY.md  URL-STRUCTURE.md  WEBSITE-SUMMARY.md  package-lock.json  package.json  pnpm-lock.yaml
website/src/lib/actions/: addCopyButtons.ts
website/src/lib/components/: CopyCodeButton.svelte  DarkModeToggle.svelte  ReadingProgress.svelte  RelatedPosts.svelte  TableOfContents.svelte
website/src/lib/posts/: convert-docs-to-markdown.md
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/about/: +page.svelte
website/src/routes/blog/: +page.svelte
website/src/routes/blog/[slug]/: +page.svelte  +page.ts
website/src/routes/sitemap.xml/: +server.ts
website/static/: robots.txt
