[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-fetch"
version = "2.0.3"
description = "Dynamic documentation fetching CLI that converts entire documentation sites to single markdown files for AI/LLM consumption"
readme = "README.md"
authors = [{name = "AlphaTechini", email = "rehobothokoibu@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
keywords = ["documentation", "ai", "llm", "markdown", "crawler", "security"]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/AlphaTechini/doc-fetch"
Repository = "https://github.com/AlphaTechini/doc-fetch"
Documentation = "https://github.com/AlphaTechini/doc-fetch#readme"

[project.scripts]
doc-fetch = "doc_fetch.cli:main"